# zanshin-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  BASE_README.md  CLI.md  CONTRIBUTING.md  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  zanshin
.github/workflows/: ci.yml  coverage.yml  python-app.yml  release.yml  run-tests.yml  semgrep.yml
src/: __init__.py  main.py
src/config/: sdk.py
src/lib/: awsorgrun.py  models.py  utils.py
src/lib/docs/: README.md
test/: account_test.py  alerts_test.py  api_key_test.py  follower.py  follower_request.py  following_request.py  following_test.py  invites_test.py  main_test.py  member_invite.py  member_test.py  organization_test.py  scan_target_test.py  scan_test.py  summary_test.py  utils_test.py
zanshincli/: __init__.py  awsorgrun.py  main.py  test_main.py  version.py
zanshincli/src/: account.py  awsorgrun.py  dummy_aws_credentials  invites.py  main.py  options.py  utils.py
